Adicionando fluxo de navegação

--- a/atv_1/index.html
+++ b/atv_1/index.html
@@ -1,15 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./src//global.css">
-  <title>Vite App</title>
+  <title>Terra</title>
 </head>
 
 <body>
-  <script type="module" src="/src/main.js"></script>
+  <nav class="navbar">
+    <div class="navbar-logo">🌍 Flat Earth</div>
+    <ul class="navbar-menu">
+      <li><a href="/real" data-link>Universo Real</a></li>
+      <li><a href="/fake" data-link>Universo Fake</a></li>
+
+    </ul>
+  </nav>
+  <div id="app"></div>
+  <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
